[gd_scene load_steps=4 format=3 uid="uid://uw8barblxj8t"]

[ext_resource type="Script" uid="uid://bwy3pewuyutx1" path="res://mob/mob.gd" id="1_6jlfs"]
[ext_resource type="PackedScene" uid="uid://ctvsvu355yk54" path="res://mob/bat_model.tscn" id="1_7b8ug"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6jlfs"]
radius = 0.314781

[node name="Mob" type="RigidBody3D"]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_6jlfs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_6jlfs")

[node name="bat_model" parent="." instance=ExtResource("1_7b8ug")]
unique_name_in_owner = true

[node name="DeathTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
